--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,16 +6,107 @@ $clr-orange: #ff6c2c;
 $clr-light: #ffffff;
 $font-stack: open-sans, sans-serif;
 
+ul {
+	padding: 0;
+	margin: 0;
+}
+
+.no-padding {
+	padding: 0 !important;
+}
+
 .logo {
 	width: 186px;
 	height: 19px;
 }
 
+#Home {
+	height: 174px;
+}
+
 .nav-list {
+	ul {
+		height: 24px;
+	}
 	li {
 		color: $clr-black;
 		font: normal normal bold 18px/29px $font-stack;
 		text-transform: capitalize;
-		letter-spacing: -0.09px;
+		text-align: left;
+		margin-left: 20px;
+
+		height: 24px;
 	}
 }
+
+#carousel {
+	margin: 0 auto 56px auto;
+}
+
+.carousel-item > img {
+	margin: auto;
+	height: 45rem;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+	opacity: $carousel-control-hover-opacity;
+}
+
+.carousel-control-prev {
+	justify-content: flex-start;
+	margin-left: 3.5%;
+}
+.carousel-control-next {
+	justify-content: flex-end;
+	margin-right: 3.5%;
+}
+
+.carousel-caption {
+	position: absolute;
+
+	left: (100% - $carousel-caption-width) * 0.5;
+	top: 40%;
+	padding-top: 0;
+	padding-bottom: 0;
+
+	text-align: left;
+
+	h5 {
+		font: normal normal normal 25px/90px $font-stack;
+		letter-spacing: 0.5px;
+		color: $clr-light;
+		opacity: 0.75;
+		padding: 0;
+		margin: 0;
+		height: 34px;
+	}
+
+	p {
+		font: normal normal normal 45px/90px $font-stack;
+		text-transform: capitalize;
+		opacity: 1;
+		color: $clr-light;
+		margin-bottom: 0;
+		padding-top: 7px;
+		height: 61px;
+	}
+
+	button {
+		background: $clr-orange 0% 0% no-repeat padding-box;
+		border-radius: 10px;
+		color: $clr-light;
+		font: normal normal bold 20px/98px $font-stack;
+		width: 301px;
+		height: 92px;
+		text-align: center;
+		padding: 0;
+		border: 1px solid $clr-orange;
+		margin-top: 90px;
+	}
+}
+
+/* .car-img {
+	
+}
+ */
