--- a/css/style.css
+++ b/css/style.css
@@ -7000,8 +7000,8 @@ fieldset:disabled .btn {
   right: 15%;
   bottom: 1.25rem;
   left: 15%;
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
+  /* padding-top: $carousel-caption-padding-y; */
+  /*  padding-bottom: $carousel-caption-padding-y; */
   color: #fff;
   text-align: center;
 }
@@ -12855,6 +12855,7 @@ ul {
 
 .no-padding {
   padding: 0 !important;
+  overflow-x: hidden;
 }
 
 .logo {
@@ -12880,7 +12881,7 @@ ul {
 }
 
 #carousel {
-  margin: 0 auto 56px auto;
+  margin: 0 auto 40px auto;
 }
 
 .carousel-item > img {
@@ -12908,49 +12909,114 @@ ul {
 }
 
 .carousel-caption {
-  position: absolute;
   left: 15%;
   top: 40%;
   padding-top: 0;
   padding-bottom: 0;
+  position: absolute;
+  max-height: 45rem;
   text-align: left;
 }
 
 .carousel-caption h5, .carousel-caption .h5 {
-  font: normal normal normal 25px/90px open-sans, sans-serif;
+  font: normal normal normal 1.5rem/5.5rem open-sans, sans-serif;
   letter-spacing: 0.5px;
   color: #ffffff;
   opacity: 0.75;
   padding: 0;
   margin: 0;
-  height: 34px;
+  height: 2rem;
 }
 
 .carousel-caption p {
-  font: normal normal normal 45px/90px open-sans, sans-serif;
+  font: normal normal normal 2.8rem/5.6rem open-sans, sans-serif;
   text-transform: capitalize;
   opacity: 1;
   color: #ffffff;
-  margin-bottom: 0;
-  padding-top: 7px;
-  height: 61px;
+  padding-top: 0.5rem;
+  height: 3.8rem;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .carousel-caption button {
   background: #ff6c2c 0% 0% no-repeat padding-box;
-  border-radius: 10px;
+  border-radius: 0.6rem;
   color: #ffffff;
-  font: normal normal bold 20px/98px open-sans, sans-serif;
+  font: normal normal bold 1.25rem/1.25rem open-sans, sans-serif;
   width: 301px;
   height: 92px;
   text-align: center;
-  padding: 0;
+  margin-top: 5.5rem;
+  position: relative;
   border: 1px solid #ff6c2c;
-  margin-top: 90px;
 }
 
-/* .car-img {
-	
+.rectangle-section {
+  margin-bottom: 5rem;
 }
- */
+
+.rectangle, .rectangle-1, .rectangle-2, .rectangle-3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 283px;
+  width: 388px;
+  margin-bottom: 1rem;
+}
+
+.rectangle-1 {
+  background: transparent url("/assets/desktop/Group 151.png") 0% 0% no-repeat padding-box;
+}
+
+.rectangle-2 {
+  background-image: url("/assets/desktop/Group 152.png");
+}
+
+.rectangle-3 {
+  background-image: url("/assets/desktop/Group 153.png");
+}
+
+.rectangle-cap {
+  color: #ffffff;
+  margin-bottom: 2.5rem;
+}
+
+.rectangle-cap h5, .rectangle-cap .h5 {
+  font: normal normal normal 1.5rem/1.5rem open-sans, sans-serif;
+}
+
+.rectangle-cap h6, .rectangle-cap .h6 {
+  font: normal normal normal 1.1rem/1.5rem open-sans, sans-serif;
+}
+
+.rectangle-cap button {
+  background: #7c7c79 0% 0% no-repeat padding-box;
+  color: #ffffff;
+  width: 137px;
+  height: 39px;
+  border: 1px solid #7c7c79;
+  margin-top: 2rem;
+}
+
+.about-article {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  font: normal normal bold 1rem/1.5rem open-sans, sans-serif;
+  letter-spacing: 6px;
+  color: #292f39;
+}
+
+.about-images img {
+  width: 380px;
+  height: 440px;
+}
 /*# sourceMappingURL=style.css.map */
