--- a/css/style.css
+++ b/css/style.css
@@ -13006,17 +13006,98 @@ ul {
   margin-top: 2rem;
 }
 
+.article-wrapper {
+  margin-top: 1rem;
+}
+
+.article-wrapper button {
+  margin-top: 2.5rem;
+  width: 15rem;
+  height: 4.5rem;
+  background: #ff6c2c 0% 0% no-repeat padding-box;
+  border-radius: 10px;
+  font: normal normal bold 1.25rem/1.25rem open-sans, sans-serif;
+  letter-spacing: 0.4px;
+  border: 1px solid #ff6c2c;
+  color: #ffffff;
+}
+
 .about-article {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
+  padding-bottom: 2rem;
+}
+
+.about-article h5, .about-article .h5 {
   font: normal normal bold 1rem/1.5rem open-sans, sans-serif;
   letter-spacing: 6px;
   color: #292f39;
+  margin-bottom: 1rem;
+}
+
+.about-article h2, .about-article .h2 {
+  font: normal normal normal 2.5rem/2.5rem open-sans, sans-serif;
+  letter-spacing: 0px;
+  padding: 1rem 0;
+}
+
+.about-article .line-hor {
+  margin: 1rem 0;
+  width: 10.5rem;
+  border: 1px solid #ff6c2c;
+  opacity: 1;
+}
+
+.about-article article {
+  margin-top: 1.5rem;
+  color: #181a1f;
+  text-align: left;
+  font: normal normal normal 1.25rem/2.8rem open-sans, sans-serif;
+  letter-spacing: 0px;
+  min-height: 38rem;
+}
+
+.about-images {
+  height: calc((440px * 2) + 54px);
 }
 
 .about-images img {
   width: 380px;
   height: 440px;
+}
+
+.classes {
+  background: #222224 0% 0% no-repeat padding-box;
+  margin-top: 6.25rem;
+}
+
+.classes header {
+  height: 28rem;
+}
+
+.classes header h3, .classes header .h3 {
+  font: normal normal normal 3.8rem/1.5rem open-sans, sans-serif;
+  color: #ffffff;
+  height: 5rem;
+}
+
+.classes header hr {
+  width: 8rem;
+  border: 1px solid #ff6c2c;
+  opacity: 1;
+  margin: 1rem 0;
+}
+
+.classes header p {
+  text-align: center;
+  font: normal normal normal 1.25rem/3rem open-sans, sans-serif;
+  letter-spacing: 0px;
+  color: #ffffff;
+  width: 80%;
+}
+
+.class-rectangle {
+  height: 486px;
 }
 /*# sourceMappingURL=style.css.map */
