--- a/css/style.css
+++ b/css/style.css
@@ -11956,5 +11956,19 @@ main {
   background-color: #ffffff;
   border: 1px solid #ff6c2c;
   width: 100%;
+  height: 4rem;
+}
+
+.accordion-button:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border-color: #ff6c2c;
+  background-color: #ffffff;
+  color: #181a1f;
+}
+
+.accordion-item {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 /*# sourceMappingURL=style.css.map */
