--- a/scss/style.scss
+++ b/scss/style.scss
@@ -478,4 +478,17 @@ main {
 	background-color: #ffffff;
 	border: 1px solid $clr-orange;
 	width: 100%;
+	height: 4rem;
+
+	&:focus {
+		box-shadow: none;
+		border-color: $clr-orange;
+		background-color: #ffffff;
+		color: #181a1f;
+	}
+}
+
+.accordion-item {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
 }
