--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,515 +17,50 @@ main {
 	opacity: 1;
 }
 
-.home-container {
-	padding-top: 3.5rem;
-	padding-bottom: 1rem;
-	//margin-bottom: clamp(1rem, calc(1rem + 0.33vh), 5.2rem);
-
-	/* margin-left: clamp(2rem, 10vw, 192px); */
-}
-
 .no-padding {
 	padding: 0 !important;
 	overflow-x: hidden;
-}
-
-.logo {
-	width: 186px;
-	height: 19px;
-	padding-left: 0.75rem;
-}
-
-.nav-list {
-	ul {
-		height: 24px;
-
-		padding: 0;
-		margin: 0;
-	}
-	li {
-		color: $clr-black;
-		font-weight: bold;
-		font-size: 17px;
-		line-height: 29px;
-		font-family: $font-stack;
-		text-transform: capitalize;
-		text-align: center;
-
-		letter-spacing: -0.09px;
-
-		height: 24px;
-	}
-
-	@media (max-width: 375px) {
-		li {
-			font-size: 15px;
-		}
-	}
 }
 
 ////////////////////////////////////////////////////////////////////////////
 /////////////////////       #CAROUSEL            ////////////////////////////
 ///////////////////////////////////////////////////////////////////////////////
 
-.carousel-container {
-	max-width: 1468px;
-	width: 100%;
-	margin: 0 auto;
-	box-sizing: border-box;
-}
-
-.carousel-custom {
-	height: 100%;
-	min-height: 50vh;
-}
-
-.carousel-cap {
-	padding-top: 0;
-	padding-bottom: 0;
-	position: absolute;
-	top: 25%;
-	left: 10vw;
-
-	right: 0;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-
-	text-align: left;
-
-	h5 {
-		font: normal normal normal 1.25rem/3.5rem $font-stack;
-		letter-spacing: 0.5px;
-		color: $clr-light;
-		opacity: 0.75;
-		padding: 0;
-		margin-bottom: 2rem;
-		height: 1.6rem;
-		width: 75%;
-	}
-
-	p {
-		font: normal normal normal 1.5rem/2.25rem $font-stack;
-		text-transform: capitalize;
-		opacity: 1;
-		color: $clr-light;
-		width: 80%;
-
-		padding-top: 0.5rem;
-		height: 3.8rem;
-	}
-
-	button {
-		background: $clr-orange 0% 0% no-repeat padding-box;
-		border-radius: 0.6rem;
-		color: $clr-light;
-		font: normal normal bold 1.25rem/1.25rem $font-stack;
-		width: 317px;
-		height: 72px;
-		text-align: center;
-		margin-top: 3.5rem;
-		position: relative;
-
-		border: 1px solid $clr-orange;
-	}
-}
 ////////////////////////////////////////////////////////////////////////////
 /////////////////////       #RECTANGLES            ////////////////////////////
 ///////////////////////////////////////////////////////////////////////////////
-
-.rectangle-section {
-	margin-bottom: 5rem;
-	margin-top: 3rem;
-}
-
-.rect-row {
-	margin: 0 auto;
-}
-
-.rectangle {
-	display: flex;
-	align-items: flex-end;
-	justify-content: center;
-	height: 283px;
-	width: 100%;
-	margin-bottom: 0.5rem;
-}
-
-@media (min-width: 40rem) {
-	.rectangle {
-		margin: 1rem;
-	}
-}
-
-.rectangle-1 {
-	@extend .rectangle;
-
-	background-image: url('/assets/desktop/Group\ 151.png');
-}
-
-.rectangle-2 {
-	@extend .rectangle;
-
-	background-image: url('/assets/desktop/Group\ 152.png');
-}
-.rectangle-3 {
-	@extend .rectangle;
-	background-image: url('/assets/desktop/Group\ 153.png');
-}
-
-.rectangle-cap {
-	color: $clr-light;
-	margin-bottom: 2.5rem;
-
-	h5 {
-		font: normal normal normal 1.5rem/1.5rem $font-stack;
-	}
-
-	h6 {
-		font: normal normal normal 1.1rem/1.5rem $font-stack;
-	}
-
-	button {
-		background: #7c7c79 0% 0% no-repeat padding-box;
-		color: $clr-light;
-		width: 137px;
-		height: 39px;
-		border: 1px solid #7c7c79;
-		margin-top: 2rem;
-	}
-}
 
 ////////////////////////////////////////////////////////////////////////////
 /////////////////////       #ABOUT US            ////////////////////////////
 ///////////////////////////////////////////////////////////////////////////////
 
-.article-wrapper {
-	margin-top: 1rem;
-	padding: 0 2.25rem 0 2.25rem;
-}
-
-.read-more {
-	margin-top: 2.25rem;
-	width: 15rem;
-	height: 4.5rem;
-	background: $clr-orange 0% 0% no-repeat padding-box;
-	border-radius: 10px;
-	font: normal normal bold 1.25rem/1.25rem $font-stack;
-	letter-spacing: 0.4px;
-
-	border: 1px solid $clr-orange;
-	color: $clr-light;
-}
-
-.about-article {
-	width: fit-content;
-	padding-bottom: 2rem;
-
-	h5 {
-		font: normal normal bold 1rem/1.5rem $font-stack;
-		letter-spacing: 6px;
-		color: #292f39;
-		margin-bottom: 1rem;
-	}
-
-	h2 {
-		font: normal normal normal 1.5rem/1.5rem $font-stack;
-		letter-spacing: 0px;
-		padding: 1rem 0;
-	}
-
-	.line-orange-hor {
-		@extend .line-orange;
-
-		width: 10.5rem;
-	}
-
-	article {
-		margin-top: 1.5rem;
-		color: $clr-black;
-		text-align: left;
-		font: normal normal normal 1.25rem/2.8rem $font-stack;
-		letter-spacing: 0px;
-		min-height: 38rem;
-	}
-}
-
-.about-images {
-	height: calc((363px * 2) + 54px);
-	padding: 0px 12px;
-
-	img {
-		width: 317px;
-		height: 363px;
-	}
-}
-
 ////////////////////////////////////////////////////////////////////////////
 /////////////////////       #CLASSES           ////////////////////////////
 ///////////////////////////////////////////////////////////////////////////
-
-.classes {
-	margin-top: 3rem;
-	margin-bottom: 6rem;
-	background: #222224 0% 0% no-repeat padding-box;
-	padding-left: 2.2rem;
-	padding-right: 2.2rem;
-
-	header {
-		overflow-y: hidden;
-
-		h3 {
-			font: normal normal normal 3rem/1.5rem $font-stack;
-			color: $clr-light;
-			height: 4rem;
-			margin-top: 3rem;
-		}
-		.line-orange-hor {
-			@extend .line-orange;
-			width: 8rem;
-		}
-
-		p {
-			text-align: center;
-			font: normal normal normal 1.25rem/3rem $font-stack;
-			letter-spacing: 0px;
-			color: $clr-light;
-			width: 80%;
-		}
-	}
-}
-
-.class-rectangle {
-	height: 486px;
-	* {
-		padding: 0 !important;
-	}
-	.class-rect-1 {
-		background-image: url('/assets/desktop/Mask\ Group\ 7.png');
-		background-repeat: no-repeat;
-		background-size: cover;
-	}
-
-	.class-rect-2 {
-		background-image: url('/assets/desktop/Mask\ Group\ 8.png');
-		background-repeat: no-repeat;
-		background-size: cover;
-	}
-	.class-rect-3 {
-		background-image: url('/assets/desktop/Mask\ Group\ 9.png');
-		background-repeat: no-repeat;
-		background-size: cover;
-	}
-
-	.class-rect-4 {
-		background-image: url('/assets/desktop/Mask\ Group\ 10.png');
-		background-repeat: no-repeat;
-		background-size: cover;
-	}
-}
-
-.rect-cap {
-	height: 25%;
-	opacity: 1;
-
-	display: flex;
-	align-items: center;
-	justify-content: flex-start;
-
-	&-light {
-		@extend .rect-cap;
-		background: rgba(0, 0, 0, 0.58) 0% 0% no-repeat padding-box;
-		h5 {
-			color: $clr-light;
-			font: normal normal normal 1.5rem/1.5rem $font-stack;
-			margin-left: 2rem;
-		}
-	}
-
-	&-dark {
-		@extend .rect-cap;
-		background: rgba(19, 25, 26, 0.58) 0% 0% no-repeat padding-box;
-		h5 {
-			color: $clr-light;
-			font: normal normal normal 1.5rem/1.5rem $font-stack;
-			margin-left: 2rem;
-		}
-	}
-}
 
 ////////////////////////////////////////////////////////////////////////////
 /////////////////////       #TEAM          ////////////////////////////
 ///////////////////////////////////////////////////////////////////////////
 
-.teams {
-	h5 {
-		color: $clr-black;
-		font: normal normal normal 2.8rem/1.5rem $font-stack;
-		letter-spacing: 0;
-		height: 4rem;
-	}
-
-	.line-orange {
-		width: 25%;
-		margin: 0 auto 1.5rem auto;
-	}
-
-	p {
-		padding-left: 1.25rem;
-		padding-right: 1.25rem;
-		font-size: 1.25rem;
-		line-height: 3rem;
-
-		font-family: $font-stack;
-	}
-}
-
 ////////////////////////////////////////////////////////////////////////////
 /////////////////////       #CONTACT          ////////////////////////////
 ///////////////////////////////////////////////////////////////////////////
-
-.contact {
-	padding-top: 4rem;
-	background-color: #181a1f;
-	padding-bottom: 6.5rem;
-
-	h5 {
-		color: $clr-light;
-		font: normal normal normal 2.8rem/1.5rem $font-stack;
-		letter-spacing: 0;
-		padding: 0.5rem 0 0.5rem 0;
-	}
-
-	.line-orange {
-		width: 33%;
-		margin: 1rem auto;
-	}
-
-	p {
-		padding-left: 1.25rem;
-		padding-right: 1.25rem;
-		font-size: 1.25rem;
-		line-height: 3rem;
-
-		font-family: $font-stack;
-	}
-
-	input {
-		border: 1px solid $clr-orange;
-		border-radius: 2px;
-		font: normal normal normal 1.25rem/1.5rem $font-stack;
-		color: $clr-light;
-		background-color: $clr-black;
-		height: 4rem;
-		width: 100%;
-	}
-
-	input::placeholder,
-	textarea::placeholder {
-		color: $clr-light;
-	}
-
-	input:focus,
-	textarea:focus {
-		background-color: $clr-black;
-		color: $clr-light;
-	}
-
-	textarea {
-		border: 1px solid $clr-orange;
-		border-radius: 2px;
-		font: normal normal normal 1.25rem/1.5rem $font-stack;
-		color: $clr-light;
-		background-color: $clr-black;
-		min-height: 8.25rem;
-		margin-top: 1.25rem;
-	}
-
-	button {
-		height: 4rem;
-		background: $clr-orange;
-		border: 1px solid $clr-orange;
-		border-radius: 10px;
-		color: $clr-light;
-		margin-top: 3rem;
-		width: 100%;
-	}
-}
 
 ////////////////////////////////////////////////////////////////////////////
 /////////////////////       #FAQ          ////////////////////////////
 ///////////////////////////////////////////////////////////////////////////
 
-.faq {
-	padding-top: 3rem;
-	padding-bottom: 5.5rem;
-	h5 {
-		color: $clr-black;
-		font: normal normal normal 2.8rem/1.5rem $font-stack;
-		letter-spacing: 0;
-		padding: 0.5rem 0 0.5rem 0;
-	}
-
-	.line-orange {
-		width: 25%;
-		margin: 1rem auto;
-	}
-}
-
-.accordion-button {
-	background-color: #ffffff;
-	border: 1px solid $clr-orange;
-	width: 100%;
-	height: 4rem;
-
-	&:focus {
-		box-shadow: none;
-		border-color: $clr-orange;
-		background-color: #ffffff;
-		color: #181a1f;
-	}
-}
-
-.accordion-item {
-	margin-top: 1rem;
-	margin-bottom: 1rem;
-}
-
 ////////////////////////////////////////////////////////////////////////////
 /////////////////////       #Footer         ////////////////////////////
 ///////////////////////////////////////////////////////////////////////////
-
-.footer {
-	background-color: $clr-black;
-
-	.logo {
-		padding: 1.5rem 2.25rem;
-	}
-
-	.link-list {
-		padding: 1.5rem 2.25rem;
-
-		ul {
-			gap: 0.75rem;
-		}
-	}
-
-	.orange-space {
-		height: 59px;
-		width: 100%;
-		background-color: $clr-orange;
-		margin: 0 !important;
-	}
-
-	.copyright {
-		font-family: $font-stack;
-		font-size: 1rem;
-		line-height: 1.5rem;
-		letter-spacing: 0.75px;
-
-		color: $clr-light;
-		text-align: center;
-		padding: 2rem;
-	}
-}
+@import 'home';
+@import 'carous';
+@import 'rectangles';
+@import 'classes';
+@import 'teams';
+@import 'aboutus';
+@import 'contact';
+@import 'faqs';
+@import 'footer';
+@import 'extraStyles';
+@import 'mobile';
