fixed css bug in chrome, namely the text-color of the navbar

--- a/scss/_extraStyles.scss
+++ b/scss/_extraStyles.scss
@@ -14,7 +14,8 @@
 				$clr-orange,
 				#fdc830
 			); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-			background-clip: text;
+			-webkit-background-clip: text;
+
 			-webkit-text-fill-color: transparent;
 		}
 	}
